# tuna-ge

./: .gitignore  Barracuda.sln  CMakeLists.txt  Jenkinsfile  Point.cpp  README.md  RGBColor.cpp  RGBColor.h  Tuna.sln  VAO.cpp  VAO.h  azure-pipelines.yml  dllmain.cpp  generate-version.ps1  libapi.h  library.cpp  main.cpp  packages.config  resource.h  restore-packages.ps1  stdafx.h  tuna-ge.cpp  tuna-ge.h  tuna-ge.rc  tuna-ge.sln  tuna-ge.vcxproj  tuna-ge.vcxproj.filters  version.cc  version.cc.in  version.cpp  version.hh
Barracuda/: Barracuda.vcxproj.filters
Tuna/: Tuna.vcxproj
assets/scenes/: Bricks18_col.dds  OvO.OVO  TorusTest.ovo  gauntlet.OVO  gauntlet.max  gauntlet.ovo  gauntletTex.OVO  gauntletTex.ovo  guanto.OVO  hand.OVO  marble-2362267_1920.dds  plane.OVO  simple3dScene.ovo
assets/shaders/: passShader.frag  passShader.vert  shader.frag  shader.vert
assets/textures/: Bricks18_col.dds  Metal07_col.dds  Wood13_col.dds  bricks.dds  circuit.dds  marble-2362267_1920.dds  metal.dds  pave.dds  paving_stones.dds
include/: library.h
structure/: TunaNode.cpp  TunaNode.h  TunaObject.cpp  TunaObject.h
structure/button/: Button.cpp  Button.h
structure/camera/: Camera.cpp  Camera.h  CameraMode.h  ProjectionMode.h
structure/color/: RGBColor.cpp  RGBColor.h
structure/element/: Element.cpp  Element.h
structure/fbo/: fbo.cpp  fbo.h
structure/font/: Font.cpp  Font.h
structure/frontRender/: FrontRender.cpp  FrontRender.h
structure/keyboard/: Keyboard.cpp  Keyboard.h
structure/light/: Light.cpp  Light.h
structure/list/: List.cpp  List.h
structure/material/: Material.cpp  Material.h
structure/mesh/: Mesh.cpp  Mesh.h
structure/mouse/: Mouse.cpp  Mouse.h
structure/node/: Node.cpp  Node.h
structure/object/: Object.cpp  Object.h
structure/ovoreader/: OvLight.h  OvMesh.h  OvObject.h  OvoReader.cpp  OvoReader.h
structure/ovr/: ovr.h
structure/point/: Point.cpp  Point.h
structure/program/: Program.cpp  Program.h
structure/shader/: Shader.cpp  Shader.h
structure/skybox/: Skybox.cpp  Skybox.h
structure/string/: String.cpp  String.h
structure/texture/: Texture.cpp  Texture.h
structure/utils/: CurrentDir.h  WindowsFunctions.h
structure/vertex/: Vertex.cpp  Vertex.h
test/: .runsettings  CameraTest.cpp  GeTest.cpp  ListTest.cpp  Main.cpp  NodeTest.cpp  OvoScene.cpp  packages.config  test.vcxproj
test/utils/: ImageComparator.cpp  ImageComparator.h
